--- a/Development environment setup.app/Contents/Info.plist
+++ b/Development environment setup.app/Contents/Info.plist
@@ -34,11 +34,11 @@
 	<key>CFBundleIconFile</key>
 	<string>ApplicationStub</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.apple.automator.startup</string>
+	<string>com.apple.automator.Development-environment-setup</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>startup</string>
+	<string>Development environment setup</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
