--- a/Development environment setup.app/Contents/Info.plist
+++ b/Development environment setup.app/Contents/Info.plist
@@ -52,19 +52,19 @@
 	<key>CFBundleURLTypes</key>
 	<array/>
 	<key>CFBundleVersion</key>
-	<string>523</string>
+	<string>523.1</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string></string>
+	<string>23G1001</string>
 	<key>DTPlatformName</key>
 	<string>macosx</string>
 	<key>DTPlatformVersion</key>
-	<string>14.5</string>
+	<string>14.7</string>
 	<key>DTSDKBuild</key>
-	<string>23F63</string>
+	<string>23G1001</string>
 	<key>DTSDKName</key>
-	<string>macosx14.5.internal</string>
+	<string>macosx14.7.internal</string>
 	<key>DTXcode</key>
 	<string>1500</string>
 	<key>DTXcodeBuild</key>
